--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,24 +5,58 @@
   gap: 12px;
   padding: 8px 0;
   margin-bottom: 16px;
-  border-bottom: 1px solid var(--DARK);
+  border-bottom: 1px solid black;
 
   > nav {
     display: flex;
     gap: 30px;
   }
+  > h1 {
+    transition: color 0.3s ease;
+    cursor: pointer;
+  }
+
+  h1:hover,
+  h1:focus {
+    color: #00adb5;
+  }
+}
+
+.link::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px; /* Height of the underline */
+  bottom: 0;
+  left: 0;
+  background-color: #00adb5; /* Color of the underline */
+  visibility: hidden;
+  transform: scaleX(0); /* Initial state: invisible and no width */
+  transition: visibility 0s, transform 0.3s ease-out; /* Transition effect */
 }
 
 .link {
+  position: relative;
+  color: #eeeeee;
+  font-style: 'Bebas Neue', sans-serif;
   padding: 8px 16px;
-  border-radius: 4px;
+  /* border-radius: 4px; */
   text-decoration: none;
-  color: var(--DARK);
   font-weight: 500;
+}
+.link:hover,
+.link:focus {
+  color: #00adb5;
 }
 
 .linkActive {
   composes: link;
-  color: var(--PRIMARY);
   font-weight: 800;
+  color: #00adb5;
+}
+
+.link:hover::before,
+.link:focus::before {
+  visibility: visible;
+  transform: scaleX(1); /* Full width of the underline on hover/focus */
 }
